# django-social-media

./: .gitignore  README.md  pyproject.toml  requirements.text  requirements.txt
content_sharing/: apps.py  forms.py  models.py  urls.py  views.py
content_sharing/migrations/: 0001_initial.py  0002_alter_userprofile_bio.py  0002_profile_user.py  0003_profile_pic.py  0003_userprofile_photo.py  0004_alter_userprofile_photo.py  0004_post.py  0005_post.py  0005_post_user.py  0006_post_user_profile.py  0006_rename_user_post_profile.py  0007_post_content.py  0007_postlike.py  0008_alter_post_content.py  0008_reply.py  0009_post_created.py  0009_reply_post.py  0010_postlike.py  0010_reply_response.py  0011_postlike_post.py  0011_replylike.py  0012_alter_profile_pic.py  0012_replylike_reply.py
content_sharing/tests/: test_bio_form.py  test_create_post_view.py  test_home_page_view.py  test_index_view.py  test_post_form.py  test_post_like_model.py  test_post_model.py  test_profile_view.py  test_reply_like_model.py  test_reply_model.py  test_user_profile_model.py  utils.py
socialmedia/: settings.py  urls.py
user_accounts/: admin.py  forms.py  models.py  signals.py  urls.py  views.py
user_accounts/migrations/: 0001_initial.py  0002_alter_user_first_name.py  0003_alter_user_last_name.py  0004_alter_user_email.py  0005_user_birthday.py
user_accounts/tests/: test_user_login_view.py  test_user_model.py  test_user_signup_form.py  test_user_signup_view.py
user_management/: apps.py  signals.py  urls.py  views.py
user_management/tests/: test_login_view.py  test_logout_view.py  (+1 more)
(+25 files in other folders)
